Agent query: Can you now click on video titles to view their transcripts instead of being linked to YouTube?
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/2ffb19e1-6a59-496a-bd94-f453fe62459c/75ea2807-db75-43db-ae40-2b20ad31b9e4.jpg

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -41,3 +41,13 @@
     color: #888888;
     font-style: italic;
 }
+
+.clickable-title {
+    color: #00ff00;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.clickable-title:hover {
+    opacity: 0.8;
+}
